--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,36 @@
 name: VHDL Simulation CI
 
-# נפעיל על כל push או PR ל-main
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   simulate:
     runs-on: ubuntu-latest
 
     steps:
-      # יוריד את הקוד מהריפו
       - uses: actions/checkout@v3
 
-      # יתקין GHDL ו-GTKWave לצורך סימולציה
       - name: Install GHDL & GTKWave
         run: |
           sudo apt-get update
           sudo apt-get install -y ghdl gtkwave
 
-      # נקמפל את כל ה-VHDL
       - name: Compile all VHDL
         run: |
           ghdl -a DUT/*.vhd TB/*.vhd
 
-      # נריץ את ה-testbench העל־רמותי
       - name: Run top-level testbench
         run: |
           ghdl -r top_tb --wave=simulations/wave.ghw
 
-      # נעלה artifact של ה-waveform כדי שתוכל להוריד
-       - name: Upload waveform artifacts
+      - name: Upload waveform artifacts
         uses: actions/upload-artifact@v3
         with:
           name: waveforms
-          # נשדרג ל־glob כדי לתפוס כל קובץ .ghw בתיקיה
           path: simulations/*.ghw
-          # אם לא יימצא קובץ, רק נזהיר ולא נחסום את ה־workflow
           if-no-files-found: warn
