--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ on:
 jobs:
   simulate:
     runs-on: ubuntu-latest
-    steps:
 
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -21,9 +21,17 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ghdl gtkwave
 
-      - name: Analyze all VHDL files
+      - name: Analyze aux_package
         run: |
-          ghdl -a DUT/*.vhd TB/*.vhd
+          ghdl -a DUT/aux_package.vhd
+
+      - name: Analyze design files
+        run: |
+          ghdl -a DUT/*.vhd
+
+      - name: Analyze test benches
+        run: |
+          ghdl -a TB/*.vhd
 
       - name: Elaborate top-level testbench
         run: |
@@ -32,7 +40,7 @@ jobs:
       - name: Run simulation
         run: |
           mkdir -p simulations
-          ghdl -r top_tb --wave=simulations/wave.ghw --stop-time=50us
+          ghdl -r top_tb --wave=simulations/wave.ghw
 
       - name: Upload waveform artifact
         uses: actions/upload-artifact@v4
