--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,12 +35,12 @@ jobs:
 
       - name: Elaborate top-level testbench
         run: |
-          ghdl -e --std=08 --ieee=synopsys top_tb
+          ghdl -e --std=08 --ieee=synopsys tb_top
 
       - name: Run simulation (with timeout)
         run: |
             mkdir -p simulations
-            ghdl -r --std=08 --ieee=synopsys top_tb \
+            ghdl -r --std=08 --ieee=synopsys tb_top \
               --stop-time=250ns \
               --wave=simulations/wave.ghw
 
